# multi-agent

./: README.md
crew_demo/: README.md  pyproject.toml  report.md
crew_demo/src/crew_demo/: main.py
debate_match_1/: README.md  pyproject.toml
debate_match_1/src/debate_match_1/: crew.py  main.py
debate_match_1/src/debate_match_1/config/: agents.yaml  tasks.yaml
debate_match_1/src/debate_match_1/tools/: damage_tool.py
one_werewolf/: README.md  pyproject.toml
one_werewolf/src/one_werewolf/: flow.py  game_manager.py  game_room.py  game_state.py  game_task.py  main.py
one_werewolf/src/one_werewolf/config/: werewolf_config.yaml
zero_collaboration/: README.md  article.md  pyproject.toml
zero_collaboration/src/zero_collaboration/: crew.py  main.py
zero_collaboration/src/zero_collaboration/config/: agents.yaml  tasks.yaml
zero_creator_flow/: README.md  pyproject.toml
zero_creator_flow/output/: complete_guide.md  guide_outline.json
zero_creator_flow/src/zero_creator_flow/: main.py
zero_creator_flow/src/zero_creator_flow/crews/content_crew/: content_crew.py
zero_creator_flow/src/zero_creator_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
zero_flow_state_mgt/: README.md  pyproject.toml
zero_flow_state_mgt/src/zero_flow_state_mgt/: main.py  persistent_counter_flow.py
zero_memory/: README.md  pyproject.toml
zero_memory/src/zero_memory/: crew.py  main.py
zero_research_crew/: README.md  pyproject.toml
zero_research_crew/output/: report.md
zero_research_crew/src/zero_research_crew/: crew.py  main.py
zero_research_crew/src/zero_research_crew/config/: agents.yaml  tasks.yaml
