[project]
name = "crew_demo"
version = "0.1.0"
description = "crew-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
crew_demo = "crew_demo.main:run"
run_crew = "crew_demo.main:run"
train = "crew_demo.main:train"
replay = "crew_demo.main:replay"
test = "crew_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
