[project]
name = "one_werewolf"
version = "0.1.0"
description = "one_werewolf using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
]

[project.scripts]
kickoff = "one_werewolf.main:kickoff"
run_crew = "one_werewolf.main:kickoff"
plot = "one_werewolf.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
