[project]
name = "zero_collaboration"
version = "0.1.0"
description = "zero_collaboration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
zero_collaboration = "zero_collaboration.main:run"
run_crew = "zero_collaboration.main:run"
train = "zero_collaboration.main:train"
replay = "zero_collaboration.main:replay"
test = "zero_collaboration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
