[project]
name = "zero_flow_state_mgt"
version = "0.1.0"
description = "zero_flow_state_mgt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
]

[project.scripts]
kickoff = "zero_flow_state_mgt.main:kickoff"
run_crew = "zero_flow_state_mgt.main:kickoff"
plot = "zero_flow_state_mgt.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
