[project]
name = "zero_memory"
version = "0.1.0"
description = "zero_memory using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]
packages = [{include = "zero_memory", from = "src"}]

[project.scripts]
zero_memory = "zero_memory.main:run"
run_crew = "zero_memory.main:run"
train = "zero_memory.main:train"
replay = "zero_memory.main:replay"
test = "zero_memory.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
