[project]
name = "zero_research_crew"
version = "0.1.0"
description = "zero_research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
zero_research_crew = "zero_research_crew.main:run"
run_crew = "zero_research_crew.main:run"
train = "zero_research_crew.main:train"
replay = "zero_research_crew.main:replay"
test = "zero_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
